<resources>
    <string name="app_name">CatchPoint</string>
    <string name="title_activity_maps">Map</string>
    <string name="catchpoint">CatchPoint</string>
    <string name="filtres">Filtres</string>
    <string name="parcours">Mes parcours</string>
    <string name="profil">Profil</string>
    <string name="rechercher">Rechercher</string>
    <string name="title_activity_settings">Paramètres</string>

    <string name="titre">CatchPoint</string>
    <string name="champLogin">Login</string>
    <string name="champMDP">Mot de passe</string>
    <string name="buttonInscription">S\'inscrire</string>
    <string name="buttonConnexion">Se connecter</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_help">Aides</string>
    <string name="pref_header_about">A propos</string>
    <string name="pref_header_log_out">Se déconnecter</string>
    <string name="title_top_bar">Paramètres</string>
    <string name="title_top_bar_profil">Profil</string>
    <string name="title_top_bar_mesparcours">Mes parcours</string>
    <string name="nom">Nom</string>
    <string name="item_default_name">Antoine</string>


    <string name="name_profil_bar">Nom</string>
    <string name="prenom_profil_bar">Prénom</string>
    <string name="pseudo_profil_bar">Pseudo</string>
    <string name="email_profil_bar">E-mail</string>
    <string name="mdp_profil_bar">Mot de passe</string>
    <string name="annuler">Annuler</string>
    <string name="catch_it">Catch it!</string>
    <string name="difficult">Difficulté :</string>
    <string name="abandonner">Abandonner</string>
    <string name="indice">Indice</string>

</resources>
