<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iut.catchpoint.catchpoint.LogActivity"
    android:background="@drawable/nature3">


    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:text="@string/titre"
        android:fontFamily="@font/benchnine_regular"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.260"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/logo_catchpoint"
        app:layout_constraintTop_toBottomOf="@+id/titre"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7.5dp"
        android:layout_marginBottom="7.5dp"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/champLogin"
        android:id="@+id/login"
        android:textAlignment="center"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/champMDP"
        android:id="@+id/motDePasse"
        android:textAlignment="center"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        android:layout_marginTop="@dimen/marginTopButton" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonInscription"
        android:id="@+id/inscrire"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motDePasse"
        app:layout_constraintHorizontal_bias="0.12"
        android:layout_marginTop="50dp"
        android:theme="@drawable/main_header_selector"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonConnexion"
        android:id="@+id/connecter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motDePasse"
        app:layout_constraintHorizontal_bias="0.87"
        android:layout_marginTop="50dp"
        android:theme="@style/buttonTheme"/>


</android.support.constraint.ConstraintLayout>