<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <include
        layout="@layout/top_bar"
        android:id="@+id/top_bar"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:stretchColumns="1">

        <View
            android:layout_height="1dip"
            android:background="#D8D8D8" />
    <TableRow>
        <TextView
            android:layout_column="1"
            android:textSize="24sp"
            android:text="@string/pref_header_about"
            android:padding="10dip" />
    </TableRow>
        <View
            android:layout_height="1dip"
            android:background="#D8D8D8" />
    <TableRow>
        <TextView
            android:layout_column="1"
            android:textSize="24sp"
            android:text="@string/pref_header_help"
            android:padding="10dip" />
    </TableRow>
        <View
            android:layout_height="1dip"
            android:layout_marginEnd="5dp"
            android:background="#D8D8D8" />
    <TableRow>
        <TextView
            android:layout_column="1"
            android:textSize="24sp"
            android:text="@string/pref_header_log_out"
            android:padding="10dip"
            android:onClick="disconnect"/>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>